5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1671_1100.log
== SUBMITION (2019-04-28 10:38:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
elif (cedula == 5):
	animal = "garca"
elif (cedula == 10):
	animal = "arara"
elif (cedula == 20):
	animal = "mico-leao-dourado"
elif (cedula == 50):
	animal = "onca-pintada"
elif (cedula == 100):
	animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- EXECUTION TIME:
0.231552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 18, in <module>
    animal = garoupa
NameError: name 'garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:38:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
elif (cedula == 5):
	animal = "garca"
elif (cedula == 10):
	animal = "arara"
elif (cedula == 20):
	animal = "mico-leao-dourado"
elif (cedula == 50):
	animal = "onca-pintada"
elif (cedula == 100):
	animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    animal = garoupa
NameError: name 'garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:39:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
elif (cedula == 5):
	animal = "garca"
elif (cedula == 10):
	animal = "arara"
elif (cedula == 20):
	animal = "mico-leao-dourado"
elif (cedula == 50):
	animal = "onca-pintada"
elif (cedula == 100):
	animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- EXECUTION TIME:
0.19
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 18, in <module>
    animal = garoupa
NameError: name 'garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:39:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
elif (cedula == 5):
	animal = "garca"
elif (cedula == 10):
	animal = "arara"
elif (cedula == 20):
	animal = "mico-leao-dourado"
elif (cedula == 50):
	animal = "onca-pintada"
elif (cedula == 100):
	animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- EXECUTION TIME:
0.205459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 18, in <module>
    animal = garoupa
NameError: name 'garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:40:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
	elif (cedula == 5):
		animal = "garca"
	elif (cedula == 10):
		animal = "arara"
	elif (cedula == 20):
		animal = "mico-leao-dourado"
	elif (cedula == 50):
		animal = "onca-pintada"
	elif (cedula == 100):
		animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- EXECUTION TIME:
0.13197
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 9
    elif (cedula == 5):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:00:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
	elif (cedula == 5):
		animal = "garca"
	elif (cedula == 10):
		animal = "arara"
	elif (cedula == 20):
		animal = "mico-leao-dourado"
	elif (cedula == 50):
		animal = "onca-pintada"
	elif (cedula == 100):
		animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- ERROR:
File "XXXX", line 9
    elif (cedula == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:01:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "tartaruga"
	elif (cedula == 5):
		animal = "garca"
	elif (cedula == 10):
		animal = "arara"
	elif (cedula == 20):
		animal = "mico-leao-dourado"
	elif (cedula == 50):
		animal = "onca-pintada"
	elif (cedula == 100):
		animal = garoupa
else:
	animal = "erro"
	
print(animal)
-- ERROR:
File "XXXX", line 9
    elif (cedula == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:48:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = "Garça"
elif (cedula == 10):
	animal = "Arara"
elif (cedula == 20):
	animal = "Mico-leão-dourado"
elif (cedula == 50):
	animal = "Onça-pintada"
elif (cedula == 100):
	animal = "Garoupa"
else:
	animal = "Erro"

print("Entrada:", cedula)

if animal == "Erro:
	print("Animal: Invalido")
else:
	print("Animal:", animal)
-- ERROR:
File "XXXX", line 24
    if animal == "Erro:
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:48:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = "Garça"
elif (cedula == 10):
	animal = "Arara"
elif (cedula == 20):
	animal = "Mico-leão-dourado"
elif (cedula == 50):
	animal = "Onça-pintada"
elif (cedula == 100):
	animal = "Garoupa"
else:
	animal = "Erro"

print("Entrada:", cedula)

if animal == "Erro":
	print("Animal: Invalido")
else:
	print("Animal:", animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:48:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = "Garca"
elif (cedula == 10):
	animal = "Arara"
elif (cedula == 20):
	animal = "Mico-leao-dourado"
elif (cedula == 50):
	animal = "Onca-pintada"
elif (cedula == 100):
	animal = "Garoupa"
else:
	animal = "Erro"

print("Entrada:", cedula)

if animal == "Erro":
	print("Animal: Invalido")
else:
	print("Animal:", animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:49:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("valor da cedula:"))

if (cedula == 2):
	animal = "Tartaruga"
elif (cedula == 5):
	animal = "Garca"
elif (cedula == 10):
	animal = "Arara"
elif (cedula == 20):
	animal = "Mico-leao-dourado"
elif (cedula == 50):
	animal = "Onca-pintada"
elif (cedula == 100):
	animal = "Garoupa"
else:
	animal = "Erro"

print("Entrada:", cedula)

if animal == "Erro":
	print("Animal: Invalido")
else:
	print("Animal:", animal)
-- EXECUTION TIME:
0.237828
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
